# arconaut

./: .clippy.toml  .gitignore  AGENTS_START_HERE.md  CLAUDE.md  Cargo.toml  MATERIA.md  deny.toml
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.github/workflows/: ci.yml
crates/arconaut-agent/: Cargo.toml  build.rs
crates/arconaut-agent/proto/: inbox.proto
crates/arconaut-agent/src/: agent.rs  bus.rs  bus_tool.rs  compaction.rs  dedup.rs  dispatch.rs  hooks.rs  inbox.rs  inbox_server.rs  injection.rs  lib.rs  persistent_shell.rs  session.rs  soul.rs
crates/arconaut-audit/: Cargo.toml
crates/arconaut-audit/src/: lib.rs
crates/arconaut-cli/: Cargo.toml
crates/arconaut-cli/src/: main.rs  repl.rs  terminal_bridge.rs  utils.rs
crates/arconaut-core/: Cargo.toml
crates/arconaut-core/src/: context.rs  docs.rs  lib.rs  message.rs  pdf.rs  tool.rs  tool_registry.rs  vars.rs
crates/arconaut-corpus/: Cargo.toml
crates/arconaut-corpus/src/: lib.rs
crates/arconaut-eval/: Cargo.toml
crates/arconaut-eval/src/: lib.rs
crates/arconaut-machine/: Cargo.toml
crates/arconaut-machine/src/: anthropic.rs  lib.rs  provider.rs  skills.rs  tools.rs
crates/arconaut-tui/: Cargo.toml
crates/arconaut-tui/src/: app.rs  ghostty.rs  lib.rs  protocol.rs  widgets.rs
docs/: architecture.md  code-review-2026-06-07.md  neurotic-library-request.md  phase0-conformance.md  phase0-subplan.md  phase1-conformance.md  phase1-subplan.md  phase2-conformance.md  phase2-subplan.md  phase3-conformance.md  phase3-subplan.md  phase4-conformance.md  phase4-subplan.md  quarantine-survey.md  soul-design.md  system-prompt-reference.md  tui-design.md
docs/tui-research/: bloomberg-terminal-gospel.md  deep-research-question.md  dense-visualization-at-scale.md  gpu-2d-rendering-rust.md  literature-catalog.md  network-graph-visualization.md  perfetto-trace-format.md  quarantine-index.md  scientific-viz-constrained-spaces.md  tensor-visualization.md  terminal-emulator-landscape.md  terminal-graphics-protocols.md  terminal-input-interaction.md  tui-frameworks.md
