[workspace]
members = [
    "crates/arconaut-core",
    "crates/arconaut-machine",
    "crates/arconaut-tui",
    "crates/arconaut-agent",
    "crates/arconaut-audit",
    "crates/arconaut-eval",
    "crates/arconaut-corpus",
    "crates/arconaut-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Patrick Beam <patrick@massmind.ai>"]
license = "MIT"
repository = "https://github.com/patrickbeam/arconaut"

[workspace.dependencies]
# Async
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# gRPC
tonic = "0.13"

# Testing
proptest = "1.6"

# Internal
arconaut-core = { path = "crates/arconaut-core" }
arconaut-machine = { path = "crates/arconaut-machine" }
arconaut-tui = { path = "crates/arconaut-tui" }
arconaut-agent = { path = "crates/arconaut-agent" }
arconaut-audit = { path = "crates/arconaut-audit" }
arconaut-eval = { path = "crates/arconaut-eval" }
arconaut-corpus = { path = "crates/arconaut-corpus" }
