[workspace]
members = [
    "crates/arconaut-core",
    "crates/arconaut-machine",
    "crates/arconaut-tui",
    "crates/arconaut-agent",
    "crates/arconaut-audit",
    "crates/arconaut-eval",
    "crates/arconaut-corpus",
    "crates/arconaut-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Patrick Beam <patrick@massmind.ai>"]
license = "MIT"
repository = "https://github.com/patrickbeam/arconaut"

[workspace.dependencies]
# Async runtime — used by: provider HTTP, tool I/O, agent loop
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }

# Object-safe async traits — required for Box<dyn Tool> with async call()
async-trait = "0.1"

# Serialization — core to Message, ChatRequest, tool schemas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client — Anthropic API only
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Timestamps — Message::timestamp, Utc formatting
chrono = { version = "0.4", features = ["serde"] }

# Regex — GrepTool only; std has no regex engine
regex = "1.11"

# Testing — temp dirs for filesystem tool tests
tempfile = "3.14"

# TUI framework — Phase 2: dual-pane terminal, event loop, widgets
ratatui = "0.30"
crossterm = "0.28"

# Terminal emulation — persistent shell pane, ANSI parsing
vt100 = "0.16"

# Config/variable storage — TOML parsing for system/project/session vars
toml = "0.8"

# Markdown parsing — skill content, PDF generation source
pulldown-cmark = "0.13"

# PDF generation — lightweight PDF writer for reports
pdf-writer = "0.15"

# UUID generation — utilities bin
uuid = { version = "1.16", features = ["v4"] }

# Base64 encoding/decoding — utilities bin (also pulled in by reqwest)
base64 = "0.22"

# gRPC — inter-agent inbox (Phase 4)
tonic = "0.12"
prost = "0.13"

# Async stream wrappers — tonic streaming
tokio-stream = "0.1"

# Internal
arconaut-core = { path = "crates/arconaut-core" }
arconaut-machine = { path = "crates/arconaut-machine" }
arconaut-tui = { path = "crates/arconaut-tui" }
arconaut-agent = { path = "crates/arconaut-agent" }
arconaut-audit = { path = "crates/arconaut-audit" }
arconaut-eval = { path = "crates/arconaut-eval" }
arconaut-corpus = { path = "crates/arconaut-corpus" }
