[package]
name = "arconaut-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "arconaut"
path = "src/main.rs"

[dependencies]
arconaut-core = { workspace = true }
arconaut-machine = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
