[package]
name = "arconaut-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "arconaut"
path = "src/main.rs"

[dependencies]
arconaut-core = { workspace = true }
arconaut-machine = { workspace = true }
arconaut-agent = { workspace = true }
arconaut-tui = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
pdf-writer = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = { workspace = true }
uuid = { workspace = true }
