[package]
name = "arconaut-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
arconaut-core = { workspace = true }
arconaut-agent = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
vt100 = { workspace = true }
tokio = { workspace = true }
